--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -58,21 +58,29 @@
               </li>
             </ul>
             <div class="user_option">
-              <a href="sit2.html">
-                <span>
-                  Войти
-                </span>
-                /
-              </a>
-              <a href={% url "ps_account:registration" %}>
-                <span>
-                  Зарегистрироваться
-                </span>
-              </a>
+              {% if user.is_authenticated %}
+                  <a href="{% url 'ps_account:account' %}">
+                      <span>Личный кабинет</span>
+                  </a>
+                  /
+                  <a href="{% url 'ps_account:logout' %}">
+                      <span>Выйти</span>
+                  </a>
+              {% else %}
+                  <a href="{% url 'ps_account:login' %}">
+                      <span>Войти</span>
+                  </a>
+                  /
+                  <a href="{% url 'ps_account:registration' %}">
+                      <span>Зарегистрироваться</span>
+                  </a>
+              {% endif %}
+              
               <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
+                  <button class="btn my-2 my-sm-0 nav_search-btn" type="submit"></button>
               </form>
-            </div>
+          </div>
+          
           </div>
           <div>
             <div class="custom_menu-btn ">
